fix: validate cluster members before operations (#673)